tests/errors/unsorted/compiler/too_many_printf_params/21_int_parameters.c
void main() 
{
    int x = 0;
    printf("%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i%i", x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x, x);
}
